resolved right spacing in mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8367,7 +8367,8 @@ button.close {
 }
 
 .container-menu {
-  padding: 10px 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .navbar-default {
@@ -8375,6 +8376,14 @@ button.close {
   margin-bottom: 0px;
   border: 0;
   border-radius: 0;
+}
+
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
+  .navbar-default {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+  }
 }
 
 .navbar-default .navbar-collapse {
@@ -8524,7 +8533,9 @@ button.close {
   padding-top: 66.64%;
 }
 
-body {
-  padding-top: 70px;
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
+  body {
+    padding-top: 70px;
+  }
 }
 
