--- a/resources/assets/sass/components/_navigation.scss
+++ b/resources/assets/sass/components/_navigation.scss
@@ -1,11 +1,17 @@
 .container-menu {
-    padding: 10px 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .navbar-default {
     background-color: $black-default;
     margin-bottom: 0px;
     border: 0;
     border-radius: 0;
+    @include media-query(laptop-retina) {
+        position: fixed;
+        z-index: 1000;
+        top: 0;
+    }
     .navbar-collapse {
         margin-top: 10px;
         @include media-query(laptop-retina) {
